finished array read/write